<resources>
    <string name="app_name">PM_ExerciciCartes</string>
    <string name="nick_name">NickName</string>
    <string name="login_password">Password</string>
    <string name="login_title">Login</string>
    <string name="login_button">LOGIN</string>
    <string name="not_null">NickName and Password can not be null</string>
    <string name="registro_page">Sing In</string>
    <string name="is_nickname">NickName already used</string>
    <string name="email">Email</string>
    <string name="registry_ok">Registration completed successfully</string>
    <string name="menu">Menu</string>
    <string name="play_game">PLAY GAME</string>
    <string name="scores">RANKING</string>
    <string name="exit">META-GAME</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="passwordfail">Can you create a new account?</string>
    <string name="motor">Motor:</string>
    <string name="cilindros">Cilindros:</string>
    <string name="marca">Marca</string>
    <string name="potencia">Potencia</string>
    <string name="revoluciones">Rev. X min.</string>
    <string name="velocidad">Velocidad</string>
    <string name="consumo">Consumo</string>
    <string name="play">Play Card</string>
    <string name="carta_cpu">Car: </string>
    <string name="caracteristica">Caracteristic:</string>
    <string name="round">Round:</string>
    <string name="jugador">Player</string>
    <string name="cpu">CPU</string>
    <string name="best_players">RANKING</string>
    <string name="conexion_data">Conexion data</string>
    <string name="et_user">User</string>
    <string name="user_name">User name</string>
    <string name="et_passwd">Password</string>
    <string name="et_pass_sumary">Enter your password</string>
    <string name="service">Service</string>
    <string name="enable_service">Enable service</string>
    <string name="sumary_service">The service will start automatically</string>
    <string name="security">Security</string>
    <string name="encryption">Use encryption</string>
    <string name="cifrate_alg">Encryption algorithms</string>
    <string name="tv_usuario">User:</string>
    <string name="tv_passwd">Password:</string>
    <string name="tv_service">Service:</string>
    <string name="tv_cifrate">Cifrate:</string>
    <string name="icReload">Reload</string>
</resources>
