<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gamescreen">

    <Button
        android:id="@+id/btPlayGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/colorPrimaryDark"
        android:padding="30dp"
        android:text="@string/play_game"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/colorPrimaryDark"
        android:padding="10dp"
        android:text="@string/scores"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btPlayGame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btMetaGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/colorPrimaryDark"
        android:padding="10dp"
        android:text="@string/exit"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btPlayGame"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btPrefs"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:background="@drawable/preferencias"
        android:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btPlayGame" />

    <Button
        android:id="@+id/btDeveloperMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/colorPrimaryDark"
        android:padding="10dp"
        android:shadowColor="@color/colorAccent"
        android:text="@string/developermode"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btPrefs"
        app:layout_constraintTop_toBottomOf="@+id/btPlayGame" />

</androidx.constraintlayout.widget.ConstraintLayout>
