<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/textura"
    tools:context=".activities.CartaDetalleActivity">

    <TextView
        android:id="@+id/tvMarcaGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvModeloGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/tvMarcaGame"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/swMotor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/motor"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMarcaGame" />

    <Switch
        android:id="@+id/swCilindros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/cilindros"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swMotor" />

    <Switch
        android:id="@+id/swPotencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/potencia"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swCilindros" />

    <TextView
        android:id="@+id/tvMotorGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/swMotor"
        app:layout_constraintTop_toBottomOf="@+id/tvModeloGame" />

    <Switch
        android:id="@+id/swRevolucionesGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/revoluciones"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swPotencia" />

    <Switch
        android:id="@+id/swVelocidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/velocidad"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swRevolucionesGame" />

    <Switch
        android:id="@+id/swConsumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/consumo"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swVelocidad" />

    <TextView
        android:id="@+id/tvCilindrosGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="TextView"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/swCilindros"
        app:layout_constraintTop_toBottomOf="@+id/tvMotorGame" />

    <TextView
        android:id="@+id/tvPotenciaGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="11dp"
        android:text="TextView"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/swPotencia"
        app:layout_constraintTop_toBottomOf="@+id/tvCilindrosGame" />

    <TextView
        android:id="@+id/tvRevGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="TextView"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/swRevolucionesGame"
        app:layout_constraintTop_toBottomOf="@+id/tvPotenciaGame" />

    <TextView
        android:id="@+id/tvVelocidadGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="9dp"
        android:text="TextView"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/swVelocidad"
        app:layout_constraintTop_toBottomOf="@+id/tvRevGame" />

    <TextView
        android:id="@+id/tvConsumoGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="TextView"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/swConsumo"
        app:layout_constraintTop_toBottomOf="@+id/tvVelocidadGame" />

    <Button
        android:id="@+id/btPlayCard"
        android:layout_width="150dp"
        android:layout_height="89dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/colorPrimaryDark"
        android:padding="10dp"
        android:text="@string/play"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvRevGame"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:text="c.c."
        android:textColor="@android:color/background_light"
        android:textColorLink="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tvMotorGame"
        app:layout_constraintTop_toBottomOf="@+id/tvModeloGame" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="11dp"
        android:text="KW."
        android:textColor="@android:color/background_light"
        android:textColorLink="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tvPotenciaGame"
        app:layout_constraintTop_toBottomOf="@+id/tvCilindrosGame" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="9dp"
        android:text="Km/h."
        android:textColor="@android:color/background_light"
        android:textColorLink="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tvVelocidadGame"
        app:layout_constraintTop_toBottomOf="@+id/tvRevGame" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="l."
        android:textColor="@android:color/background_light"
        android:textColorLink="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tvConsumoGame"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageButton
        android:id="@+id/ibVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:src="@drawable/comback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/btPlayCard" />

</androidx.constraintlayout.widget.ConstraintLayout>